# tmux-resurrect-manager

./: .gitignore  LICENSE  tmux-resurrect-manager.cabal
app/: Main.hs
src/: TRM.hs
