name:               tmux-resurrect-manager
version:            0.1.0.0
synopsis:           Manage tmux-resurrect files
description:        Please see README.md
homepage:           http://github.com/siphilia/tmux-resurrect-manager#readme
license:            BSD3
license-file:       LICENSE
author:             siphilia
maintainer:         siphilia <siphilia.rn@gmail.com>
copyright:          (c) 2015 siphilia
category:           Web
build-type:         Simple
-- extra-source-files:
cabal-version:      >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:      TRM
  build-depends:        base >= 4.7 && < 5
                      , directory
                      , filepath
                      , unix
  default-language:     Haskell2010

executable trm
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , shakespeare >= 2.0
                      , text >= 1.0
                      , tmux-resurrect-manager
  default-language:     Haskell2010

test-suite tmux-resurrect-manager-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , tmux-resurrect-manager
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/siphilia/tmux-resurrect-manager

